--- a/pom.xml
+++ b/pom.xml
@@ -21,12 +21,12 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://13.233.215.37:9980/</sonar.host.url>
+		<!--<sonar.host.url>http://13.233.215.37:9980/</sonar.host.url>
                 <sonar.login>9d988128860aaa457ff7729bdfdf996f55cce543</sonar.login>
 		
              
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>-->
 
 	</properties>
 
@@ -94,7 +94,7 @@
 		
 	</dependencies>
 	
-	<distributionManagement>
+	<!--<distributionManagement>
 	
 	    <repository>
 	      <id>nexus</id>
@@ -108,7 +108,7 @@
 	      <url>http://13.233.119.31:9980/mithuntechnologies/repository/walmart-snapshot/</url>
 	    </snapshotRepository>
 	    
-	</distributionManagement>
+	</distributionManagement>-->
 	
 	<build>
 		<finalName>maven-web-application</finalName>
