--- a/pom.xml
+++ b/pom.xml
@@ -95,16 +95,16 @@
 	
 	<distributionManagement>
 	
-	    <repository>
-	      <id>nexus</id>
+	   <!-- <repository>
+	      <id>saddam</id>
 	      <name>Mithun Technologies Releases Nexus Repository</name>
 	      <url>http://54.255.174.111:8081/repository/flipkart-release/</url>
-	    </repository>
+	    </repository>-->
 	    
 	    <snapshotRepository>
-	      <id>nexus</id>
+	      <id>saddam</id>
 	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://54.255.174.111:8081/repository/flipkart-snapshot/</url>
+	      <url>http://65.2.152.196:8081/repository/saddam-hosted/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
