--- a/pom.xml
+++ b/pom.xml
@@ -92,21 +92,15 @@
 		</dependency>
 		
 	</dependencies>
-	
 	<distributionManagement>
-	
-	   <!-- <repository>
-	      <id>saddam</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://54.255.174.111:8081/repository/flipkart-release/</url>
-	    </repository>-->
-	    
-	    <snapshotRepository>
-	      <id>saddam</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://65.2.152.196:8081/repository/saddam-hosted/</url>
-	    </snapshotRepository>
-	    
+		<snapshotRepository>
+			<id>saddam</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>saddam</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
 	</distributionManagement>
 	
 	<build>
